--- a/src/unit_tests/wazuh_modules/exec/CMakeLists.txt
+++ b/src/unit_tests/wazuh_modules/exec/CMakeLists.txt
@@ -38,7 +38,10 @@ list(APPEND tests_flags "-Wl,--wrap,fim_db_init -Wl,--wrap=syscom_dispatch \
                          -Wl,--wrap=fim_db_teardown -Wl,--wrap=Start_win32_Syscheck \
                          -Wl,--wrap=is_fim_shutdown -Wl,--wrap,OSList_AddData \
                          -Wl,--wrap,merror -Wl,--wrap,OSList_DeleteThisNode \
-                         -Wl,--wrap,OSList_GetFirstNode ${DEBUG_OP_WRAPPERS}")
+                         -Wl,--wrap,OSList_GetFirstNode -Wl,--wrap,fork \
+                         -Wl,--wrap,kill -Wl,--wrap,exit -Wl,--wrap,OSList_Destroy \
+                         -Wl,--wrap,mdebug1 -Wl,--wrap,sleep \
+                         ${DEBUG_OP_WRAPPERS}")
 
 # Compiling tests
 list(LENGTH tests_names count)
