--- a/src/Makefile
+++ b/src/Makefile
@@ -1292,7 +1292,7 @@ GUNZIP := gunzip
 GZIP := gzip
 CURL := curl -so
 DEPS_VERSION = 27
-RESOURCES_URL_BASE := https://packages.wazuh.com/deps/
+RESOURCES_URL_BASE := https://packages-dev.wazuh.com/deps/
 RESOURCES_URL := $(RESOURCES_URL_BASE)$(DEPS_VERSION)
 CPYTHON := cpython
 PYTHON_SOURCE := no
