--- a/.github/actions/compile_and_test/action.yml
+++ b/.github/actions/compile_and_test/action.yml
@@ -17,15 +17,23 @@ runs:
       # Dependencies for testing:
       # - valgrind
       - name: Install dependencies
-        uses: awalsh128/cache-apt-pkgs-action@latest
+        uses: awalsh128/cache-apt-pkgs-action@v1
         with:
-          packages: valgrind libc6-dbg
+          packages: valgrind
+          version: 1.0
+
+      # Dependencies for testing:
+      # - libc6-dbg
+      - name: Install dependencies
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: libc6-dbg
           version: 1.0
 
       # Dependencies for coverage:
       # - lcov
       - name: Install dependencies
-        uses: awalsh128/cache-apt-pkgs-action@latest
+        uses: awalsh128/cache-apt-pkgs-action@v1
         with:
           packages: lcov
           version: 1.0
