--- a/api/test/integration/env/docker-compose.yml
+++ b/api/test/integration/env/docker-compose.yml
@@ -70,10 +70,10 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent1
     depends_on:
-      - nginx-lb
+      - haproxy-lb
 
   wazuh-agent2:
     profiles:
@@ -89,11 +89,11 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent2
     depends_on:
       - wazuh-agent1
-      - nginx-lb
+      - haproxy-lb
 
   wazuh-agent3:
     profiles:
@@ -109,11 +109,11 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent3
     depends_on:
       - wazuh-agent2
-      - nginx-lb
+      - haproxy-lb
 
   wazuh-agent4:
     profiles:
@@ -129,11 +129,11 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent4
     depends_on:
       - wazuh-agent3
-      - nginx-lb
+      - haproxy-lb
 
   wazuh-agent5:
     profiles:
@@ -149,12 +149,12 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent5
       - agent_old
     depends_on:
       - wazuh-agent4
-      - nginx-lb
+      - haproxy-lb
 
   wazuh-agent6:
     profiles:
@@ -170,12 +170,12 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent6
       - agent_old
     depends_on:
       - wazuh-agent5
-      - nginx-lb
+      - haproxy-lb
 
   wazuh-agent7:
     profiles:
@@ -191,12 +191,12 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent7
       - agent_old
     depends_on:
       - wazuh-agent6
-      - nginx-lb
+      - haproxy-lb
 
   wazuh-agent8:
     profiles:
@@ -212,20 +212,20 @@ services:
       - ./tools/:/tools
     entrypoint:
       - /scripts/entrypoint.sh
-      - nginx-lb
+      - haproxy-lb
       - wazuh-agent8
       - agent_old
     depends_on:
       - wazuh-agent7
-      - nginx-lb
+      - haproxy-lb
 
-  nginx-lb:
+  haproxy-lb:
     profiles:
       - standalone
       - cluster
     build:
-      context: ./base/nginx-lb
-    image: integration_test_nginx-lb
+      context: ./base/haproxy-lb
+    image: integration_test_haproxy-lb
     entrypoint:
       - /scripts/entrypoint.sh
       - ${ENV_MODE}
