Change haproxy conf

--- a/api/test/integration/env/base/haproxy-lb/haproxy.conf
+++ b/api/test/integration/env/base/haproxy-lb/haproxy.conf
@@ -1,11 +1,7 @@
 global
     log /dev/log    local0
     log /dev/log    local1 notice
-    chroot /var/lib/haproxy
-    stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
     stats timeout 30s
-    user haproxy
-    group haproxy
     daemon
 
 defaults
@@ -16,6 +12,12 @@ defaults
     timeout connect 5000
     timeout client  50000
     timeout server  50000
+    default-server init-addr last,libc,none
+
+frontend health
+  mode http
+  bind 127.0.0.1:80
+  http-request return status 200 if { src 127.0.0.0/8 }
 
 frontend mycluster
     bind *:1514
