Change balance leastconn

--- a/api/test/integration/env/base/haproxy-lb/haproxy.conf
+++ b/api/test/integration/env/base/haproxy-lb/haproxy.conf
@@ -28,7 +28,7 @@ frontend register
     default_backend register_backend
 
 backend mycluster_backend
-    balance roundrobin
+    balance leastconn
     server wazuh-master wazuh-master:1514
     server wazuh-worker1 wazuh-worker1:1514
     server wazuh-worker2 wazuh-worker2:1514
