--- a/framework/wazuh/core/cluster/hap_helper/data/configuration.yaml
+++ b/framework/wazuh/core/cluster/hap_helper/data/configuration.yaml
@@ -15,20 +15,19 @@ wazuh:
     # Wazuh agents connection service port (TCP)
     port: 1514
   # Wazuh cluster nodes to exclude on auto mode
-  excluded_nodes: [ ]
+  excluded_nodes: []
 
 proxy:
   # Wazuh Proxy API configuration
   api:
     # Wazuh Proxy API address
-    address: localhost
+    address: wazuh-proxy
     # Wazuh Proxy API port
     port: 7777
     # Wazuh Proxy API username
     user: wazuh
     # Wazuh Proxy API password
     password: wazuh
-
   # Defined Proxy backend (frontend will append '_front' to it)
   backend: wazuh_cluster
 
@@ -44,10 +43,11 @@ hap_helper:
   # Seconds to sleep after the end of the agent reconnection phase
   agent_reconnection_stability_time: 60
   # Agent chunk size (each chunk defines the max number of agents to be reconnected at once)
-  agent_reconnection_chunk_size: 100
+  agent_reconnection_chunk_size: 120
   # Seconds to sleep after an agent chunk reconnection (if there is more than one)
   agent_reconnection_time: 5
   # Agent imbalance tolerance
   agent_tolerance: 0.1
   # Time in minutes before removing a disconnected Wazuh node from the backend
   remove_disconnected_node_after: 60
+  log_level: debug
