--- a/src/Makefile
+++ b/src/Makefile
@@ -361,6 +361,12 @@ endif
 OSSEC_CFLAGS+=-g
 AR_LDFLAGS+=-g
 
+ifeq (,$(filter ${DEBUG},YES yes y Y 1))
+	OSSEC_CFLAGS+=-DNDEBUG
+	OFLAGS+=-O2
+	AR_LDFLAGS+=-s
+endif
+
 OSSEC_CFLAGS+=${OFLAGS}
 OSSEC_LDFLAGS+=${OFLAGS}
 AR_LDFLAGS+=${OFLAGS}
