--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -427,6 +427,9 @@ auth.timeout_microseconds=0
 vulnerability-detection.translation_lru_size=2048
 vulnerability-detection.osdata_lru_size=1000
 
+# Vulnerability detector enable manager scan
+vulnerability-dectection.disable_manager_scan=0
+
 # Debug options.
 # Debug 0 -> no debug
 # Debug 1 -> first level of debug
