Apply review comments.
Improve logic and variables names with comments.

--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -427,8 +427,10 @@ auth.timeout_microseconds=0
 vulnerability-detection.translation_lru_size=2048
 vulnerability-detection.osdata_lru_size=1000
 
-# Vulnerability detector enable manager scan
-vulnerability-dectection.disable_manager_scan=0
+# Vulnerability detector - Enable or disable the scan manager
+# 0. Disabled
+# 1. Enabled
+vulnerability-dectection.disable_scan_manager=0
 
 # Debug options.
 # Debug 0 -> no debug
