Fix typos and minor bugs.

--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -428,9 +428,9 @@ vulnerability-detection.translation_lru_size=2048
 vulnerability-detection.osdata_lru_size=1000
 
 # Vulnerability detector - Enable or disable the scan manager
-# 0. Disabled
-# 1. Enabled
-vulnerability-dectection.disable_scan_manager=0
+# 0. Enabled
+# 1. Disabled
+vulnerability-detection.disable_scan_manager=0
 
 # Debug options.
 # Debug 0 -> no debug
