--- a/packages/debs/amd64/agent/Dockerfile
+++ b/packages/debs/amd64/agent/Dockerfile
@@ -34,9 +34,12 @@ RUN curl -OL http://packages.wazuh.com/utils/cmake/cmake-3.18.3.tar.gz && \
     make -j$(nproc) && make install && ln -s /usr/local/bin/cmake /usr/bin/cmake && \
     cd / && rm -rf cmake-*
 
-# Add the script to build the Debian package
-#ADD build.sh /usr/local/bin/build_package
-#RUN chmod +x /usr/local/bin/build_package
+# Add the script and helper_funcitons to build the Debian package
+# ADD build.sh /usr/local/bin/build_package
+ADD helper_function.sh /usr/local/bin/helper_function.sh
+ADD gen_permissions.sh /tmp/gen_permissions.sh
+
+# RUN chmod +x /usr/local/bin/build_package
 
 # Set the entrypoint
-#ENTRYPOINT ["/usr/local/bin/build_package"]
+# ENTRYPOINT ["/usr/local/bin/build_package"]
